src/main/java/com/example/tareaspring/errors/DateFormatException.java
package com.example.tareaspring.errors;

public class DateFormatException extends RuntimeException {

    public DateFormatException(String message) {
        super(message);
    }
}
